Update app name and titles

--- a/front/404.html
+++ b/front/404.html
@@ -1,4 +1,4 @@
-<html ng-app="riskEbbApp">
+<html ng-app="riskChartApp">
 
 <head>
 
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="./scripts/angular.min.js"></script>
-	<script src="./scripts/riskebb_front.js"></script>
+	<script src="./scripts/riskchart_front.js"></script>
 	<link href="./styles/bootstrap.min.css" rel="stylesheet">
 	<link href="./styles/bootstrap-theme.min.css" rel="stylesheet">
-	<title>riskEbb | Flow & Ebb</title>
+	<title>riskChart</title>
 </head>
 
 
